Update OOPS learning files: L1, L2a, Polymorphism Shapes, and launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "L1",
+            "request": "launch",
+            "mainClass": "L1.L1",
+            "projectName": ""
+        },
+        {
+            "type": "java",
             "name": "l1",
             "request": "launch",
             "mainClass": "practice.l1",
